--- a/config/database.yml
+++ b/config/database.yml
@@ -24,8 +24,8 @@ default: &default
 development:
   <<: *default
   database: private-events_development
-  # username: postgres
-  # password: qwer1234
+  username: postgres
+  password: qwer1234
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,8 +60,8 @@ development:
 test:
   <<: *default
   database: private-events_test
-  # username: postgres
-  # password: qwer1234
+  username: postgres
+  password: qwer1234
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -85,5 +85,5 @@ test:
 production:
   <<: *default
   database: private-events_production
-  # username: postgres
-  # password: qwer1234
+  username: postgres
+  password: qwer1234
